examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__literals__format_strings@fa bfc e d e.snap
---
source: src/tests/corpus/literals.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                String(
                                    String {
                                        children: [
                                            StringStart(
                                                StringStart {
                                                    [RANGE]
                                                },
                                            ),
                                            StringContent(
                                                StringContent {
                                                    children: [],
                                                    [RANGE]
                                                },
                                            ),
                                            Interpolation(
                                                Interpolation {
                                                    type_conversion: None,
                                                    expression: Expression(
                                                        PrimaryExpression(
                                                            Call(
                                                                Call {
                                                                    function: Identifier(
                                                                        Identifier {
                                                                            [RANGE]
                                                                        },
                                                                    ),
                                                                    arguments: ArgumentList(
                                                                        ArgumentList {
                                                                            children: [
                                                                                Expression(
                                                                                    PrimaryExpression(
                                                                                        String(
                                                                                            String {
                                                                                                children: [
                                                                                                    StringStart(
                                                                                                        StringStart {
                                                                                                            [RANGE]
                                                                                                        },
                                                                                                    ),
                                                                                                    StringContent(
                                                                                                        StringContent {
                                                                                                            children: [],
                                                                                                            [RANGE]
                                                                                                        },
                                                                                                    ),
                                                                                                    Interpolation(
                                                                                                        Interpolation {
                                                                                                            type_conversion: None,
                                                                                                            expression: Expression(
                                                                                                                PrimaryExpression(
                                                                                                                    Identifier(
                                                                                                                        Identifier {
                                                                                                                            [RANGE]
                                                                                                                        },
                                                                                                                    ),
                                                                                                                ),
                                                                                                            ),
                                                                                                            format_specifier: None,
                                                                                                            [RANGE]
                                                                                                        },
                                                                                                    ),
                                                                                                    StringContent(
                                                                                                        StringContent {
                                                                                                            children: [],
                                                                                                            [RANGE]
                                                                                                        },
                                                                                                    ),
                                                                                                    StringEnd(
                                                                                                        StringEnd {
                                                                                                            [RANGE]
                                                                                                        },
                                                                                                    ),
                                                                                                ],
                                                                                                [RANGE]
                                                                                            },
                                                                                        ),
                                                                                    ),
                                                                                ),
                                                                            ],
                                                                            [RANGE]
                                                                        },
                                                                    ),
                                                                    [RANGE]
                                                                },
                                                            ),
                                                        ),
                                                    ),
                                                    format_specifier: None,
                                                    [RANGE]
                                                },
                                            ),
                                            StringContent(
                                                StringContent {
                                                    children: [],
                                                    [RANGE]
                                                },
                                            ),
                                            StringEnd(
                                                StringEnd {
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
