examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__literals__format_strings@fyield d.snap
---
source: src/tests/corpus/literals.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                String(
                                    String {
                                        children: [
                                            StringStart(
                                                StringStart {
                                                    [RANGE]
                                                },
                                            ),
                                            Interpolation(
                                                Interpolation {
                                                    type_conversion: None,
                                                    expression: Yield(
                                                        Yield {
                                                            children: Some(
                                                                Expression(
                                                                    PrimaryExpression(
                                                                        Identifier(
                                                                            Identifier {
                                                                                [RANGE]
                                                                            },
                                                                        ),
                                                                    ),
                                                                ),
                                                            ),
                                                            [RANGE]
                                                        },
                                                    ),
                                                    format_specifier: None,
                                                    [RANGE]
                                                },
                                            ),
                                            StringEnd(
                                                StringEnd {
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
